Adding Shared Module from onboarding screen

--- a/src/app/onboarding-screen/nav-bar/nav-bar.component.html
+++ b/src/app/onboarding-screen/nav-bar/nav-bar.component.html
@@ -1,9 +1,6 @@
 <div class="nav-button-container">
   <div class="back-btn">
-    <ion-icon
-      class="back-btn--icon"
-      name="arrow-back-outline"
-    ></ion-icon>
+    <ion-icon class="back-btn--icon" name="arrow-back-outline"></ion-icon>
   </div>
   <div class="bar-container">
     <ion-icon class="bar-1" name="ellipse-outline"></ion-icon>
@@ -12,9 +9,6 @@
     <ion-icon class="bar-4" name="ellipse-outline"></ion-icon>
   </div>
   <div class="next-btn" routerLink="/onboarding/screen2">
-    <ion-icon
-      class="next-btn--icon"
-      name="arrow-forward-outline"
-    ></ion-icon>
+    <ion-icon class="next-btn--icon" name="arrow-forward-outline"></ion-icon>
   </div>
 </div>
