--- a/src/app/onboarding-screen/nav-bar/nav-bar.component.html
+++ b/src/app/onboarding-screen/nav-bar/nav-bar.component.html
@@ -1,14 +1,18 @@
 <div class="nav-button-container">
-  <div class="back-btn">
+  <div class="back-btn" (click)="backBtn()">
     <ion-icon class="back-btn--icon" name="arrow-back-outline"></ion-icon>
   </div>
   <div class="bar-container">
-    <ion-icon class="bar-1" name="ellipse-outline"></ion-icon>
-    <ion-icon class="bar-2" name="ellipse-outline"></ion-icon>
-    <ion-icon class="bar-3" name="ellipse-outline"></ion-icon>
-    <ion-icon class="bar-4" name="ellipse-outline"></ion-icon>
+    <ion-icon
+      class="circle"
+      [class.selected-item]="page === 1"
+      name="ellipse-outline"
+    ></ion-icon>
+    <ion-icon class="circle" [class.selected-item]="page === 2" name="ellipse-outline"></ion-icon>
+    <ion-icon class="circle" [class.selected-item]="page === 3" name="ellipse-outline"></ion-icon>
+    <ion-icon class="circle" [class.selected-item]="page === 4" name="ellipse-outline"></ion-icon>
   </div>
-  <div class="next-btn" routerLink="/onboarding/screen2">
+  <div class="next-btn" (click)="nextBtn()" >
     <ion-icon class="next-btn--icon" name="arrow-forward-outline"></ion-icon>
   </div>
 </div>
