--- a/src/app/onboarding-screen/nav-bar/nav-bar.component.scss
+++ b/src/app/onboarding-screen/nav-bar/nav-bar.component.scss
@@ -1,52 +1,55 @@
 .nav-button-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 80px;
-  
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 80px;
 }
 .back-btn {
-    width: 52px;
-    height: 52px;
-    background-color: #fff;
-    border-radius: 100%;
-    position: relative;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    &--icon {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 27px;
-    }
+  width: 52px;
+  height: 52px;
+  background-color: #fff;
+  border-radius: 100%;
+  position: relative;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  &:hover{
+    opacity:0.8;
+  }
+  &--icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 27px;
+  }
 }
 .bar-container {
-    margin: 0 40px;
-  }
-.bar-1 {
-    background-color: black;
-    border-radius: 100%;
-    margin: 0 8px;
-  }
-.bar-2,
-.bar-3,
-.bar-4 {
-    border-radius: 100%;
-    margin: 0 8px;
+  margin: 0 40px;
 }
+
 .next-btn {
-    width: 52px;
-    height: 52px;
-    background-color: #f0bb62;
-    border-radius: 100%;
-    position: relative;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    &--icon {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 27px;
-      color: #fff;
-    }
+  width: 52px;
+  height: 52px;
+  background-color: #f0bb62;
+  border-radius: 100%;
+  position: relative;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  &:hover{
+    opacity:0.8;
+  }
+  &--icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 27px;
+    color: #fff;
+  }
+}
+
+.selected-item{
+  background-color:black;
+}
+.circle {
+  border-radius: 100%;
+  margin: 0 8px;
 }
