--- a/src/app/main/home-screen/crop-details/crop-details.page.html
+++ b/src/app/main/home-screen/crop-details/crop-details.page.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>crop-details</ion-title>
+    <ion-title>{{detailsData.name}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
