--- a/src/app/main/home-screen/home-screen.page.scss
+++ b/src/app/main/home-screen/home-screen.page.scss
@@ -43,10 +43,12 @@
   &__content {
     background-color: #fff;
     &--title {
-      &-crops {
-      }
-      &-livestock {
-      }
+      font-size: 20px;
+
+      font-weight: bold;
+      padding: 0 25px;
+      margin-top: 15px;
+      display: block;
     }
   }
 }
