--- a/src/app/main/home-screen/cards/cards.component.html
+++ b/src/app/main/home-screen/cards/cards.component.html
@@ -14,6 +14,6 @@
     {{ item.name }}
   </h1>
   <p class="card__content">
-    {{ item.description.english[0].text.slice(0, 55) + "..." }}
+    {{ item.description.english.slice(0, 55) + "..." }}
   </p>
 </ion-card>
