--- a/src/app/main/home-screen/crops-screen/crops-screen.page.html
+++ b/src/app/main/home-screen/crops-screen/crops-screen.page.html
@@ -94,5 +94,8 @@
       </div>
     </ion-grid>
   </div>
-  <ion-button (click)="onClickBtn()">Done</ion-button>
+  <ion-button (click)="onClickBtn()" expand="full" color="light">
+    Done
+    <ion-icon name="arrow-forward-outline"></ion-icon>
+  </ion-button>
 </ion-content>
