--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -4,9 +4,9 @@
       <ion-label color="success">Home</ion-label>
       <ion-icon name="home-outline" color="success"></ion-icon>
     </ion-tab-button>
-    <ion-tab-button tab="tips">
-      <ion-label color="success">Tips</ion-label>
-      <ion-icon name="book-outline" color="success"></ion-icon>
+    <ion-tab-button tab="community">
+      <ion-label color="success">Community</ion-label>
+      <ion-icon name="chatbubbles-outline" color="success"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="profile">
       <ion-label color="success">Profile</ion-label>
