--- a/src/app/main/home-screen/crop-details/crop-details.page.scss
+++ b/src/app/main/home-screen/crop-details/crop-details.page.scss
@@ -74,3 +74,25 @@
     opacity: 1;
   }
 }
+
+.back-btn {
+  width: 48px;
+  height: 48px;
+  background-color: #fff;
+  border-radius: 100%;
+  position: absolute;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  top: 23px;
+  left: 23px;
+  &:hover {
+    opacity: 0.8;
+  }
+  &--icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 23px;
+    color: #333;
+  }
+}
