--- a/src/app/main/community-screen/edit/edit.page.html
+++ b/src/app/main/community-screen/edit/edit.page.html
@@ -4,15 +4,27 @@
     <div class="form">
       <ion-item>
         <ion-label position="floating">Title</ion-label>
-        <ion-input type="text" [(ngModel)]="title"></ion-input>
+        <ion-input
+          type="text"
+          [(ngModel)]="title"
+          [value]="currentTitle"
+        ></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Message</ion-label>
-        <ion-input type="text" [(ngModel)]="message"></ion-input>
+        <ion-input
+          type="text"
+          [(ngModel)]="message"
+          [value]="currentMessage"
+        ></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Image</ion-label>
-        <ion-input type="text" [(ngModel)]="image"></ion-input>
+        <ion-input
+          type="text"
+          [(ngModel)]="image"
+          [value]="currentImg"
+        ></ion-input>
       </ion-item>
     </div>
     <ion-button (click)="onClickBtn()" expand="full" size="large"
