Added auth-page,log-in,register,sign-up,validation and component button and input

--- a/src/app/main/home-screen/home-screen.page.html
+++ b/src/app/main/home-screen/home-screen.page.html
@@ -16,7 +16,7 @@
       ></ion-img>
       <div class="home__user--content">
         <ion-label class="home__user--content-greetings"
-          >Good morning,</ion-label
+          >Good Afternoon,</ion-label
         >
         <ion-label class="home__user--content-name">Jake</ion-label>
       </div>
