--- a/src/app/main/profile-screen/profile-screen.page.html
+++ b/src/app/main/profile-screen/profile-screen.page.html
@@ -7,4 +7,37 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content> </ion-content>
+<ion-content>
+  <div class="header">
+    <ion-img src="assets/img/crops/avatar.png"></ion-img>
+    <ion-label>Jake Castor</ion-label>
+  </div>
+  <div class="content">
+    <ion-list>
+      <ion-item>
+        <ion-label> Edit Data</ion-label>
+        <ion-icon name="arrow-forward-outline"></ion-icon>
+      </ion-item>
+      <ion-item>
+        <ion-label> Phone</ion-label>
+        <ion-icon name="arrow-forward-outline"></ion-icon>
+      </ion-item>
+      <ion-item>
+        <ion-label> Date of Birth</ion-label>
+        <ion-icon name="arrow-forward-outline"></ion-icon>
+      </ion-item>
+      <ion-item>
+        <ion-label> Email</ion-label>
+        <ion-icon name="arrow-forward-outline"></ion-icon>
+      </ion-item>
+      <ion-item>
+        <ion-label> Edit Crops</ion-label>
+        <ion-icon name="arrow-forward-outline"></ion-icon>
+      </ion-item>
+      <ion-item>
+        <ion-label> Address</ion-label>
+        <ion-icon name="arrow-forward-outline"></ion-icon>
+      </ion-item>
+    </ion-list>
+  </div>
+</ion-content>
