--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-menu side="start" contentId="main">
     <ion-header>
       <ion-toolbar>
-        <ion-title>Jake</ion-title>
+        <ion-title>Farmer Information App </ion-title>
       </ion-toolbar>
     </ion-header>
 
@@ -13,8 +13,12 @@
           <ion-label>Home</ion-label></ion-item
         >
         <ion-item lines="none"
-          ><ion-icon name="home-outline" slot="start"></ion-icon>
-          <ion-label>Home</ion-label></ion-item
+          ><ion-icon name="log-in-outline" slot="start"></ion-icon>
+          <ion-label>Login</ion-label></ion-item
+        >
+        <ion-item lines="none"
+          ><ion-icon slot="start" name="log-out-outline"></ion-icon>
+          <ion-label>Logout</ion-label></ion-item
         >
       </ion-list>
     </ion-content>
