Build the register page

--- a/src/app/auth-page/register/register.page.html
+++ b/src/app/auth-page/register/register.page.html
@@ -1,9 +1,30 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <div class="register page-container">
+    <div class="register__content">
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-img src="assets/img/register/welcome pic.webp"></ion-img>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-margin-top:-10px">
+            <h1 class="register__title">Welcome to Agri Information App</h1>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <p>An application to boost productivity for all Tabon farmers as well as those interested in learning more
+              about livestock and crops in Tabon</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <app-button buttonName="Register an Account"></app-button>
+            <app-button buttonName="Login"></app-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+  </div>
 </ion-content>
