--- a/src/app/UI/button/button.component.scss
+++ b/src/app/UI/button/button.component.scss
@@ -1,9 +1,9 @@
-button{
-  color:#fff;
-  background-image:linear-gradient(to right,#3DC27C,#2FF784);
-  width:100%;
-  height:50px;
-  border-radius:25px;
-  font-size:16px;
-
+.custom-button {
+  color: #fff;
+  background-image: linear-gradient(to right, #3dc27c, #2ff784);
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  font-size: 16px;
+  margin-top: 1.6rem;
 }
