--- a/src/app/auth-page/validation/validation.page.html
+++ b/src/app/auth-page/validation/validation.page.html
@@ -1,9 +1,18 @@
-<ion-content >
+<ion-content>
   <section class="validation page-container">
-    <header>
-      <h1>Fill up the form</h1>
-      <p>This is a validation to check if you are valid to use our app  </p>
-    </header>
-    <app-button [buttonName]="buttonName"></app-button>
+    <div class="validation__content">
+      <header class='validation__header'>
+        <h1>Fill up the form</h1>
+        <p>This is a validation to check if you are valid to use our app </p>
+      </header>
+      <form action="#" class="validation__form">
+        <app-input-field inputPlaceholder="Full Name"></app-input-field>
+        <app-input-field inputPlaceholder="Purok"></app-input-field>
+        <app-input-field inputPlaceholder="Barangay Code"></app-input-field>
+      </form>
+      <div class="validation__button">
+        <app-button buttonName="Done"></app-button>
+      </div>
+    </div>
   </section>
 </ion-content>
