--- a/src/global.scss
+++ b/src/global.scss
@@ -31,3 +31,15 @@
 margin:0 24px;
 overflow:hidden;
 }
+
+
+h1{
+    font-weight:bold;
+    font-size:40px;
+    color:#2E322F;
+
+}
+p{
+    font-size:16px;
+    color:#626563;
+}
