--- a/src/app/auth-page/validation/validation.page.html
+++ b/src/app/auth-page/validation/validation.page.html
@@ -11,7 +11,7 @@
         <app-input-field inputPlaceholder="Barangay Code"></app-input-field>
       </form>
       <div class="validation__button">
-        <app-button buttonName="Done"></app-button>
+        <app-button class='solid' name="Done" (click)="buttonHandlerClick()"></app-button>
       </div>
     </div>
   </section>
