--- a/src/global.scss
+++ b/src/global.scss
@@ -28,15 +28,15 @@
 
 //
 .page-container{
-margin:0 24px;
-overflow:hidden;
-}
+margin:0 2.4rem;
 
+}
 
 h1{
     font-weight:bold;
     font-size:40px;
     color:#2E322F;
+    margin:0;
 
 }
 p{
