--- a/src/app/auth-page/register/register.page.html
+++ b/src/app/auth-page/register/register.page.html
@@ -1,12 +1,8 @@
 <ion-content>
-  <div class="register page-container">
-    <div class="register__content">
+  <div class="register ">
+    <ion-img src="assets/img/register/welcome pic.webp"></ion-img>
+    <div class="register__content page-container">
       <ion-grid>
-        <ion-row>
-          <ion-col>
-            <ion-img src="assets/img/register/welcome pic.webp"></ion-img>
-          </ion-col>
-        </ion-row>
         <ion-row>
           <ion-col class="ion-margin-top:-10px">
             <h1 class="register__title">Welcome to Agri Information App</h1>
@@ -19,9 +15,9 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col>
-            <app-button buttonName="Register an Account"></app-button>
-            <app-button buttonName="Login"></app-button>
+          <ion-col class="ion-margin-top">
+            <app-button (click)="registerHandlerClick()" class="solid" name="Register an Account"></app-button>
+            <app-button (click)="loginHandlerClick()" name="Login"></app-button>
           </ion-col>
         </ion-row>
       </ion-grid>
