--- a/src/app/onboarding-screen/screen1/screen1.page.html
+++ b/src/app/onboarding-screen/screen1/screen1.page.html
@@ -1,8 +1,8 @@
 <ion-content>
-  <span class="skip-button" routerLink="/welcome">skip</span>
+  <span class="skip-button" routerLink="/auth-page/validation">skip</span>
   <ion-grid class="screen1__container">
     <ion-row class="ion-align-items-center ion-text-center">
-      <ion-col>
+      <ion-col size="12" size-sm="8" offset-sm="2">
         <app-content [data]="data"></app-content>
       </ion-col>
     </ion-row>
