--- a/src/app/onboarding-screen/screen4/screen4.page.html
+++ b/src/app/onboarding-screen/screen4/screen4.page.html
@@ -1,12 +1,5 @@
-<!--
 <ion-content>
-  <ion-buttons>
-    <ion-button routerLink="/onboarding/screen3">Back</ion-button>
-    <ion-button routerLink="/welcome">Next</ion-button>
-  </ion-buttons>
-</ion-content> -->
-<ion-content>
-  <span class="skip-button" routerLink="/welcome">skip</span>
+  <span class="skip-button" routerLink="/auth-page/validation">skip</span>
   <ion-grid class="screen4__container">
     <ion-row class="ion-align-items-center ion-text-center">
       <ion-col>
