--- a/src/app/profile-setup/crops-or-livestock/finished-setup/finished-setup.page.html
+++ b/src/app/profile-setup/crops-or-livestock/finished-setup/finished-setup.page.html
@@ -1,9 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>finished-setup</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <div class="finished-setup page-container">
+    <div class="finished-setup__content">
+      <div class="finished-setup__logo">
+        <ion-icon class="finished-setup__icon" name="checkmark-outline"></ion-icon>
+      </div>
+      <ion-label class="finished-setup__content--title">Finished Setup</ion-label>
+    </div>
+    <div class="finished-setup__buttons">
+      <app-button class="solid" name="Get started"></app-button>
+      <p routerLink="/profile-setup/crops-or-livestock/select-livestocks">Back</p>
+    </div>
+  </div>
 </ion-content>
